--- a/styles/partials/_blog-bio.scss
+++ b/styles/partials/_blog-bio.scss
@@ -4,6 +4,7 @@ body {
 
 .main-content {
     display: flex;
+    flex-wrap: wrap;
     padding-top: 10%;
 }
 
@@ -58,9 +59,89 @@ body {
         padding-left: 8%;
     }
 
-    &__list--item {
-        @include primary-font(20px);
+    &__list {
+        &--link {
+            color: $black;
+            &:hover {
+                color: $secondary-color;
+            }
+        }
+        &--item {
+            @include primary-font(20px);
+        }
     }
-
 }   
 
+/* tablet view */
+@media (max-width: 768px) {
+    .main-content {
+        display: flex;
+    }
+
+    .info {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .blog-bio {
+        width: 100%;
+        padding: 5%;
+        display: flex;
+
+        &__image {
+            width: 50%;
+            display: flex;
+            padding: 0%;
+        }
+        &__title {
+            width: 100%;
+        }
+        &__text {
+            width: 100%;
+        }
+        &__content {
+            margin-left: 5%;
+        }
+    }
+
+    .recent-posts {
+        width: 100%;
+        padding: 5%;
+        margin-bottom: 15px;
+    }
+
+    
+    .article {
+        display: block;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .comment {
+        display: block;
+        width: 100%;
+    }
+
+}
+
+// media query to support small profile images
+@media (max-width: 623px) {
+    .blog-bio__image {
+        width: 70%;
+    }    
+}
+
+@media (max-width: 553px) {
+    .blog-bio__image {
+        width: 80%;
+    }    
+}
+
+/* mobile view */
+@media (max-width: 480px) {
+    .blog-bio__image {
+        width: 90%;
+    }    
+}
