--- a/styles/partials/_blog-bio.scss
+++ b/styles/partials/_blog-bio.scss
@@ -119,10 +119,10 @@ body {
         margin: 0;
     }
 
-    .comment {
-        display: block;
-        width: 100%;
-    }
+    // .comment {
+    //     display: block;
+    //     width: 100%;
+    // }
 
 }
 
@@ -133,6 +133,7 @@ body {
     }    
 }
 
+// media query to adjust blog profile image
 @media (max-width: 553px) {
     .blog-bio__image {
         width: 80%;
@@ -143,5 +144,18 @@ body {
 @media (max-width: 480px) {
     .blog-bio__image {
         width: 90%;
-    }    
+    }  
+}
+
+/* mobile view for ~320px*/
+@media (max-width: 430px) {
+    .blog-bio {
+        display: block;
+        width: 100%;
+        &__image {
+            display: block;
+            width: 100%;
+        }   
+    }
+
 }
